[tool.poetry]
name = "codavatar"
version = "0.1.0"
description = ""
authors = ["Rishav"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.1"
uvicorn = "^0.13.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
