[tool.poetry]
name = "codavatar"
version = "0.1.0"
description = ""
authors = ["Rishav"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.14.1"
uvicorn = "^0.13.2"
Jinja2 = "^2.11.2"
Faker = "^5.0.2"
SQLAlchemy = "^1.3.22"
databases = {extras = ["postgresql"], version = "^0.4.1"}
black = "^20.8b1"
pre-commit = "^2.9.3"
mypy = "^0.790"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
